--- a/ChatterPatter/app/src/main/res/layout/custom_drawer_item.xml
+++ b/ChatterPatter/app/src/main/res/layout/custom_drawer_item.xml
@@ -17,6 +17,40 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_marginLeft="16dp"
+        android:id="@+id/userItemLayout"
+        android:layout_marginTop="0dp"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/userProfileIV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:hint="User name"
+            android:id="@+id/currentUserfullName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginBottom="1dp"
+            android:layout_marginTop="1dp"
+            android:background="#DADADC" ></View>
+        <TextView
+            android:hint="Email Address"
+            android:id="@+id/currentUserEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginBottom="1dp"
+            android:layout_marginTop="1dp"
+            android:background="#DADADC" ></View>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/headerLayout"
