--- a/ChatterPatter/app/src/main/res/layout/fragment_user_profile.xml
+++ b/ChatterPatter/app/src/main/res/layout/fragment_user_profile.xml
@@ -28,6 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
+        android:id="@+id/userFollowingTv"
         android:textSize="20dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/userFollowersTv"
